fix(Window-Snapping): Fixed flickering on right border snapping

--- a/src/components/Window.module.scss
+++ b/src/components/Window.module.scss
@@ -2,7 +2,7 @@
   position: absolute;
   display: grid;
   grid-template-rows: auto 1fr;
-  transition: width 0.3s ease, height 0.3s ease;
+  transition: width 0.3s ease, height 0.3s ease, border-radius 0.3s ease;
   backdrop-filter: blur(6px);
   border-radius: 16px;
   box-shadow: 0 0 20px 4px #33333333;
@@ -12,12 +12,14 @@
     padding: 8px;
     background: #3333337f;
     border-radius: 16px 16px 0 0;
+    transition: border-radius 0.3s ease;
   }
   .background {
     background: #ffffff7f;
     border-radius: 0 0 16px 16px;
     position: relative;
     color: #333333;
+    transition: border-radius 0.3s ease;
   }
   button {
     height: 14px;
